--- a/WebContent/assets/css/mypage/mypage-follow.css
+++ b/WebContent/assets/css/mypage/mypage-follow.css
@@ -110,6 +110,11 @@ section {
 .mypage-name {
   width: 70%;
   height: 60%;
+  color : black;
+}
+
+.mypage-content {
+	color : gray;
 }
 
 .editbtn > a{
@@ -156,7 +161,7 @@ section {
 }
 
 .creations-main {
-  padding: 5px 10px;
+  padding: 0px 10px;
   /* margin-left: 60px; */
   margin: 0 30px;
   display: flex;
