--- a/WebContent/assets/css/qna/qna-reply-write.css
+++ b/WebContent/assets/css/qna/qna-reply-write.css
@@ -1,210 +1,213 @@
 * {
-	/*   margin: 10px;
+   /*   margin: 10px;
     padding: 10px 0; */
-	background-color: rgb(255, 255, 245);
-	resize: none;
+   background-color: rgb(255, 255, 245);
+   resize: none;
 }
 
 @font-face {
-    font-family: 'GmarketSansMedium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
+   font-family: 'GmarketSansMedium';
+   src:
+      url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff')
+      format('woff');
+   font-weight: 300;
+   font-style: normal;
 }
 
 body {
-	 font-family: 'GmarketSansMedium';
+   font-family: 'GmarketSansMedium';
 }
 
 section>.big-box {
-	height: 100%;
-	border-top: 3px solid #ce97fa;
-	border-bottom: 3px solid #ce97fa;
+   height: 100%;
+   border-top: 3px solid #ce97fa;
+   border-bottom: 3px solid #ce97fa;
 }
 
 section>.gd {
-	display: flex;
-	justify-content: space-between;
+   display: flex;
+   justify-content: space-between;
 }
 
-
 .writer-sub {
-	display: flex;
-    /* margin: 10px 450px; */
-    padding: 10px 10px;
-    /* margin-bottom: -20px;*/
+   display: flex;
+   /* margin: 10px 450px; */
+   padding: 10px 10px;
+   /* margin-bottom: -20px;*/
 }
 
 .writer-sub>.author {
-	margin: 20px 0px;
+   margin: 20px 0px;
 }
 
 .writer-sub>.writer2 {
-	font-weight: bold;
-	margin: 20px 0px;
-	border: none;
+   font-weight: bold;
+   margin: 20px 0px;
+   border: none;
 }
 
 .big-box>.small-box {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
 }
 
 .small-box>.line {
-	margin-left: -38px;
-	width: 1200px;
-	border: 1px solid rgb(236, 234, 234);
+   margin-left: -38px;
+   width: 1200px;
+   border: 1px solid rgb(236, 234, 234);
 }
 
 .small-box>.text1 {
-	margin-top: 50px;
+   margin-top: 50px;
 }
 
 .small-box>.text1>p {
-	margin-right: 850px;
-	font-weight: bold;
+   margin-right: 850px;
+   font-weight: bold;
 }
 
 .small-box>.title {
-	width: 900px;
-	height: 30px;
-	border-color: rgb(80, 123, 158);
-	border-width: 1px;
-	border-radius: 5px;
+   width: 900px;
+   height: 30px;
+   border-color: rgb(80, 123, 158);
+   border-width: 1px;
+   border-radius: 5px;
 }
 
 .small-box>.word1>p {
-	font-weight: bold;
-	margin-right: 850px;
+   font-weight: bold;
+   margin-right: 850px;
 }
 
 .small-box>.word {
-	width: 900px;
-	height: 500px;
-	border-color: rgb(80, 123, 158);
-	border-width: 1px;
-	border-radius: 5px;
+   width: 900px;
+   height: 500px;
+   border-color: rgb(80, 123, 158);
+   border-width: 1px;
+   border-radius: 5px;
 }
 
 .big-box>.form-group {
-	margin: 10px 140px;
+   margin: 10px 140px;
 }
 
 .form-group>.file {
-	margin: 20px 25px;
+   margin: 20px 25px;
 }
 
 .big-box>.button {
-	width: 150px;
-	margin: 30px 1000px;
+   width: 150px;
+   margin: 30px 1000px;
 }
 
 .button {
-	display: flex;
-	justify-content: space-between;
+   display: flex;
+   justify-content: space-between;
+}
+
+.button:hover {
+   border-radius: 5px;
 }
 
 .button>button {
-	padding: 6px;
-	border-radius: 5.5%;
-	font-size: 17px;
-	border: none;
-	background-color: #ce97fa;
-	border-width: 0.5px;
-	font-family: "Hyemin";
-	cursor: pointer;
+   padding: 10px 20px;
+   border-radius: 5px;
+   cursor: pointer;
+   margin-right: 10px;
+   border-color: #B4AEE8;
+   color: #B4AEE8;
 }
 
 /* 이미지 업로드 스타일 */
 svg {
-	width: 1em;
-	height: 1em;
-	fill: rgb(255, 87, 87);
+   width: 1em;
+   height: 1em;
+   fill: rgb(255, 87, 87);
 }
 
 .image-upload-wrap {
-	border: 1px solid rgb(240, 240, 240);
-	padding: 13px;
-	position: relative;
+   border: 1px solid rgb(240, 240, 240);
+   padding: 13px;
+   position: relative;
 }
 
 .upload-text {
-	display: flex;
-	justify-content: center;
-	margin: 4px;
-	font-size: 12px;
-	color: rgb(158, 158, 158);
+   display: flex;
+   justify-content: center;
+   margin: 4px;
+   font-size: 12px;
+   color: rgb(158, 158, 158);
 }
 
 .upload-text:first-child {
-	color: black;
-	font-weight: bold;
+   color: black;
+   font-weight: bold;
 }
 
 .upload-text:last-child {
-	color: rgb(80, 123, 158);
-	font-weight: bold;
+   color: rgb(80, 123, 158);
+   font-weight: bold;
 }
 
 .upload-icon {
-	margin-right: 5px;
+   margin-right: 5px;
 }
 
 input[type='file'] {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	cursor: pointer;
-	opacity: 0;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   cursor: pointer;
+   opacity: 0;
 }
 
 .form-group>.file {
-	font-weight: bold;
+   font-weight: bold;
 }
 
 .file-list {
-	list-style-type: none;
-	margin-top: 15px;
-	display: flex;
+   list-style-type: none;
+   margin-top: 15px;
+   display: flex;
 }
 
 .file-list>li {
-	display: flex;
-	position: relative;
-	width: 145px;
-	height: 100px;
-	margin-right: 10px;
+   display: flex;
+   position: relative;
+   width: 145px;
+   height: 100px;
+   margin-right: 10px;
 }
 
 .show-img-box {
-	width: 100%;
-	height: 100%;
+   width: 100%;
+   height: 100%;
 }
 
 .show-img-box>img {
-	width: 100%;
-	height: 100%;
+   width: 100%;
+   height: 100%;
 }
 
 .btn1-box {
-	bottom: 0;
-	right: 0;
+   bottom: 0;
+   right: 0;
 }
 
 .img-cancel-btn {
-	background-color: #333333;
-	color: white;
-	border: none;
-	border-radius: 5px;
-	width: 40px;
-	height: 25px;
+   background-color: #333333;
+   color: white;
+   border: none;
+   border-radius: 5px;
+   width: 40px;
+   height: 25px;
 }
 
 .img-cancel-btn:hover {
-	background-color: #ce97fa;
-	color: #fff;
+   background-color: #ce97fa;
+   color: #fff;
 }
