--- a/WebContent/assets/css/qna/qna-reply-read.css
+++ b/WebContent/assets/css/qna/qna-reply-read.css
@@ -70,15 +70,12 @@ h4 {
 }
 
 .list-btn, .edit-btn, .delete-btn {
-	color: black;
-	background-color: rgb(198, 133, 238);
 	padding: 10px 20px;
 	border-radius: 5px;
-	border: none;
-	transition: background-color 0.3s ease, color 0.3s ease;
 	cursor: pointer;
 	margin-right: 10px;
-	font-family: "Hyemin";
+	border-color: #B4AEE8;
+    color: #B4AEE8;
 }
 
 .list-btn:hover, .edit-btn:hover, .delete-btn:hover {
@@ -164,13 +161,12 @@ svg {
 }
 
 .comment-form button {
-	margin-top: 10px;
-	padding: 5px 10px;
-	border: none;
+	padding: 10px 20px;
 	border-radius: 5px;
-	background-color: rgb(198, 133, 238);
-	color: #fff;
 	cursor: pointer;
+	margin-right: 10px;
+	border-color: #B4AEE8;
+    color: #B4AEE8;
 }
 
 .comment-form button:hover {
@@ -332,12 +328,10 @@ textarea {
 .comment-form button {
 	margin-top: 10px;
 	padding: 5px 10px;
-	border: none;
 	border-radius: 5px;
-	background-color: rgb(198, 133, 238);
-	color: black;
 	cursor: pointer;
-	font-family: "Hyemin";
+	border-color: #B4AEE8;
+    color: #B4AEE8;
 }
 
 .comment-form button:hover {
