--- a/WebContent/assets/css/creations/pageList3.css
+++ b/WebContent/assets/css/creations/pageList3.css
@@ -159,9 +159,9 @@ hr {
 }
 
 .creaions-sub {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
+	display: flex;
+    padding: 5px 10px;
+    align-items: center;
 }
 
 .sub-author {
