--- a/WebContent/assets/css/creations/aniview.css
+++ b/WebContent/assets/css/creations/aniview.css
@@ -50,9 +50,10 @@ main {
 }
 
 .creations-info {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: row;
+	display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
 }
 
 .creations-img > img {
@@ -65,7 +66,6 @@ main {
 }
 
 .follow-btn {
-  padding-top: 20px;
   text-align: center;
   color : gray;
 }
@@ -204,7 +204,6 @@ main {
 }
 
 .comment-border {
-  border: 1px solid gray;
   width: 95%;
   border-radius: 7px;
 }
@@ -276,6 +275,8 @@ main {
   display: flex;
   position: absolute;
   left: 0;
+  padding : 0;
+  margin : 0;
 }
 
 .ani-view {
