--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -143,11 +143,10 @@ li.menu-list:nth-child(5) {
 }
 
 .create-card {
-  /* border: 1px solid gray; */
-  width: 300px;
-  height: 440px;
-  margin: 20px 30px;
-  cursor: pointer;
+ 	width: 300px;
+    height: 440px;
+    margin: 17px 20px 0;
+    cursor: pointer;
 }
 
 .create-logo{
@@ -262,11 +261,10 @@ li.menu-list:nth-child(5) {
 
 /* 배경화면 사이즈 */
 .img {
-  width: 430px;
-  height: 360px;
-  margin: 10px;
-  padding: 15px;
-  /* border: 1px solid rgb(205, 205, 205); */
+  	width: 430px;
+    height: 360px;
+    margin: 0px;
+    padding: 15px;
 }
 
 .likes ,
