--- a/WebContent/assets/css/mypage/mypage-like.css
+++ b/WebContent/assets/css/mypage/mypage-like.css
@@ -128,8 +128,9 @@ section {
 }
 
 .sub-author {
-  display: flex;
-  padding: 5px 5px;
+	display: flex;
+    padding: 5px 5px;
+    align-items: center;
 }
 
 .sub-author-img {
@@ -152,9 +153,9 @@ section {
 }
 
 .sub-title {
-  padding: 20px 0 10px 10px;
-  font-size: 20px;
-  font-weight: bold;
+	padding: 5px 0 5px 10px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .sub-title > a {
@@ -162,21 +163,24 @@ section {
   color: black;
 }
 
+.sub-title > a:hover {
+	color : #ce97fa;
+}
+
 .creations-sub {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
 }
 
 .creation-like ,
 .creation-comment {
 	display: flex;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .creation-like {
-  padding: 0 10px;
-  font-size: 20px;
+  padding: 5px 10px;
+  font-size: 17px;
 }
 
 .creation-like > img{
@@ -185,8 +189,8 @@ section {
 }
 
 .creation-comment {
-  padding: 0 10px;
-  font-size: 20px;
+  padding: 5px 10px;
+  font-size: 17px;
 }
 
 .creation-comment > img{
@@ -218,79 +222,3 @@ section {
 .creations-msg {
   padding: 10px 0;
 }
-
-/* 
-.mypage-name {
-  width: 70%;
-  height: 60%;
-}
-
-.editbtn > a {
-  width: 80px;
-  background-color: rgb(213, 213, 213);
-  text-decoration: none;
-  color: black;
-  border-radius: 5px;
-  padding: 2px 5px;
-}
-
-.creations-main > section {
-  width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-img {
-  width: 70px;
-  height: 70px;
-}
-
-
-
-
-.mypage-main > .mypage-box {
-  width: 65%;
-}
-
-.creations-main {
-  padding: 10px 10px;
-  margin-left: 60px;
-  margin: 0 30px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 90%;
-  align-items: center;
-  justify-content: center;
-  color: rgb(193, 193, 193);
-  text-align: center;
-}
-
-.creations-main > section {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.creations-img > img {
-  width: 300px;
-  height: 230px;
-  align-items: center;
-}
-
- */
-
-
-
-
-
-
-
-
-
-
