--- a/WebContent/assets/css/notification/notificationRead.css
+++ b/WebContent/assets/css/notification/notificationRead.css
@@ -51,11 +51,10 @@ header{
 }
 
 .big-box>.remove{
-width: 200px;
     padding: 0 10px;
     margin: 30px auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
  
 }
