--- a/WebContent/assets/css/admin/admin.css
+++ b/WebContent/assets/css/admin/admin.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+
+body {
+   font-family: 'GmarketSansMedium';
+}
+
 main {
   width: 100%;
 }
@@ -19,11 +30,9 @@ main {
 }
 
 .admin-btn {
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-  /* margin: 0 50px; */
-  /* padding: 0 30px; */
+   display: flex;
+    justify-content: space-around;
+    width: 90%;
 }
 
 .admin-member > a {
@@ -98,8 +107,6 @@ hr {
   color: gray;
 }
 
-
-
 .member-list-status2 {
   color: red;
 }
@@ -109,13 +116,17 @@ hr {
   color: gray;
 }
 
-
 .member-status-btn {
   background-color: gainsboro;
   border: 0px solid;
   border-radius: 5px;
+  font-family: 'GmarketSansMedium';
 }
 
 .none {
-	display : none;
+   display : none;
+}
+
+.statusN {
+   color : red;
 }
