--- a/WebContent/assets/css/mypage/mypage-like.css
+++ b/WebContent/assets/css/mypage/mypage-like.css
@@ -1,3 +1,5 @@
+
+
 @font-face {
     font-family: 'GmarketSansMedium';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
@@ -6,7 +8,7 @@
 }
 
 body {
-	font-family: 'GmarketSansMedium';
+   font-family: 'GmarketSansMedium';
 }
 
 hr {
@@ -75,7 +77,7 @@ section {
 }
 
 .editbtn > a:hover {
-	color : #ce97fa;
+   color : #ce97fa;
 }
 
 .likes ,
@@ -97,7 +99,7 @@ section {
 }
 
 .name > a:hover{
-	color : #ce97fa;
+   color : #ce97fa;
 }
 
 .mypage-main2 > section {
@@ -162,21 +164,24 @@ section {
   color: black;
 }
 
+.sub-title > a:hover {
+   color : #ce97fa;
+}
+
 .creations-sub {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
 }
 
 .creation-like ,
 .creation-comment {
-	display: flex;
-    align-items: center;
+   display: flex;
+    align-items: flex-start;
 }
 
 .creation-like {
-  padding: 0 10px;
-  font-size: 20px;
+  padding: 5px 10px;
+  font-size: 17px;
 }
 
 .creation-like > img{
@@ -185,8 +190,8 @@ section {
 }
 
 .creation-comment {
-  padding: 0 10px;
-  font-size: 20px;
+  padding: 5px 10px;
+  font-size: 17px;
 }
 
 .creation-comment > img{
@@ -195,7 +200,7 @@ section {
 }
 
 .count {
-	margin : 0 5px;
+   margin : 0 5px;
 }
 
 .creations-main {
@@ -218,79 +223,3 @@ section {
 .creations-msg {
   padding: 10px 0;
 }
-
-/* 
-.mypage-name {
-  width: 70%;
-  height: 60%;
-}
-
-.editbtn > a {
-  width: 80px;
-  background-color: rgb(213, 213, 213);
-  text-decoration: none;
-  color: black;
-  border-radius: 5px;
-  padding: 2px 5px;
-}
-
-.creations-main > section {
-  width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-img {
-  width: 70px;
-  height: 70px;
-}
-
-
-
-
-.mypage-main > .mypage-box {
-  width: 65%;
-}
-
-.creations-main {
-  padding: 10px 10px;
-  margin-left: 60px;
-  margin: 0 30px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 90%;
-  align-items: center;
-  justify-content: center;
-  color: rgb(193, 193, 193);
-  text-align: center;
-}
-
-.creations-main > section {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.creations-img > img {
-  width: 300px;
-  height: 230px;
-  align-items: center;
-}
-
- */
-
-
-
-
-
-
-
-
-
-
